--- a/src/app/src/_modules/home/header/header.component.html
+++ b/src/app/src/_modules/home/header/header.component.html
@@ -93,22 +93,26 @@
           <i class="fa fa-bars" aria-hidden="true"></i>
         </a>
         <a href=""><img src="/assets/img/s1.png" width="140px" height="50px" alt="site logon"></a>
-        <a class=""><i class="fa fa-cart-plus" aria-hidden="true"></i></a>
+        <a routerLink='/cart' class="course-cart"><i class="fa fa-shopping-cart" [ngClass]="{'cart-active':flag}"
+          aria-hidden="true"></i><span class="course-sl-cart"><b>{{count}}</b></span></a>
 
-        <a class="nav-item dropdown " dropdown>
-          <a dropdownToggle type="button" class="nav-link dropdown-toggle waves-light dropdown-main">
-            <i class="fas fa-user"></i>
-            <span> Admin </span>
+
+        <a class="course-reg-acc ml-2" routerLink='/signup' *ngIf='!logged'>Đăng ký</a>
+        <a class="course-log-acc" routerLink='/login' *ngIf='!logged'>Đăng nhập</a>
+        <a class="nav-item dropdown ml-3" dropdown>
+          <a dropdownToggle type="button" class="nav-link dropdown-toggle waves-light dropdown-main" *ngIf='logged'>
+            <i class="fa fa-user"></i>
+            <span> {{thongTinUser.Ten}} </span>
             <span class="caret"></span>
           </a>
           <div class="dropdown-menu dropdown dropdown-primary" role="menu">
-            <a class="dropdown-item waves-light" href="#">My Account</a>
-            <a class="dropdown-item waves-light" href="#">Something</a>
-            <a class="dropdown-item waves-light" href="#">Something else</a>
+            <a class="dropdown-item waves-light" routerLink='/user/{{thongTinUser.Id}}'>Tài khoản của tôi</a>
+
             <div class="divider dropdown-divider"></div>
-            <a class="dropdown-item waves-light" href="#">Log out</a>
+            <a class="dropdown-item waves-light" (click)='logOut()'>Đăng Xuất</a>
           </div>
         </a>
+
       </div>
 
       <nav class="navbar navbar-default navbar-offcanvas navbar-offcanvas-touch " style="background:white;"
@@ -144,16 +148,18 @@
     <div class="container-fluid">
       <div class="row col-width-lg">
         <div class="col-lg-3 col-md-3 col-sm-4 cate-md d-flex justify-items-center">
-          <a class="course-logo" routerLink='/'><img src="./assets/img/s1.png" alt="course - Học từ chuyên gia"
-              width="138" height="33"></a>
+          <a class="course-logo" href="/"><img src="./assets/img/s1.png" alt="course - Học từ chuyên gia" width="138"
+              height="33"></a>
           <div class="course-menu-cate"><i class="fa fa-th" aria-hidden="true"></i> Danh mục
             <nav id="mysidebarmenu" class="amazonmenu">
               <ul>
                 <li class="hassub"><a title="Các khóa học công nghệ thông tin Online từ cơ bản đến chuyên sâu"
-                   routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Công Nghệ Thông Tin',Id:'1'}"><i class="fa fa fa-code" aria-hidden="true"></i> Công nghệ thông
+                    routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Công-Nghệ-Thông-Tin',Id:'1'}"><i
+                      class="fa fa fa-code" aria-hidden="true"></i> Công nghệ thông
                     tin</a>
                   <ul class="issub" style="z-index: 1008; display: none;">
-                    <li><a routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Công Nghệ Thông Tin',Id:'1'}">Tất cả Công nghệ thông tin</a></li>
+                    <li><a routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Công-Nghệ-Thông-Tin',Id:'1'}">Tất cả
+                        Công nghệ thông tin</a></li>
                     <li><a href="/tag/co-so-du-lieu">Đồ Họa</a></li>
                     <li><a href="/tag/hoc-quan-tri-mang">Phần Cứng</a></li>
                     <li><a href="/tag/lap-trinh">Phần Mềm</a></li>
@@ -161,74 +167,88 @@
                   </ul>
                 </li>
                 <li class="hassub"><a title="Các khóa học tin học văn phòng từ cơ bản đến nâng cao tốt nhất"
-                  routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Kinh Tế',Id:'2'}"><i class="fa fa fa-desktop" aria-hidden="true"></i> Kinh Tế</a>
+                    routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Kinh-Tế',Id:'2'}"><i
+                      class="fa fa fa-desktop" aria-hidden="true"></i> Kinh Tế</a>
                   <ul class="issub" style="z-index: 1011; display: none;">
-                    <li><a routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Kinh Tế',Id:'2'}">Tất cả Kinh tế</a></li>
-                    <li><a >Tài Chính</a></li>
-                    <li><a >Sales</a></li>
-                    <li><a >Chiến lược kinh tế</a></li>
+                    <li><a routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Kinh-Tế',Id:'2'}">Tất cả Kinh tế</a>
+                    </li>
+                    <li><a>Tài Chính</a></li>
+                    <li><a>Sales</a></li>
+                    <li><a>Chiến lược kinh tế</a></li>
                   </ul>
                 </li>
-                <li class="hassub"><a title="Các khóa học thiết kế từ cơ bản đến chuyên sâu" routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Giáo Dục',Id:'3'}"><i
+                <li class="hassub"><a title="Các khóa học thiết kế từ cơ bản đến chuyên sâu"
+                    routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Giáo-Dục',Id:'3'}"><i
                       class="fa fa fa-paint-brush" aria-hidden="true"></i>Giáo Dục</a>
                   <ul class="issub" style="z-index: 1012; display: none;">
-                    <li><a routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Giáo Dục',Id:'3'}">Tất cả Giáo dục</a></li>
-                    <li><a >Toán học</a></li>
-                    <li><a >Khoa Học</a></li>
-                    <li><a >Ngôn ngữ học</a></li>
-                    
+                    <li><a routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Giáo-Dục',Id:'3'}">Tất cả Giáo
+                        dục</a></li>
+                    <li><a>Toán học</a></li>
+                    <li><a>Khoa Học</a></li>
+                    <li><a>Ngôn ngữ học</a></li>
+
                   </ul>
                 </li>
                 <li class="hassub"><a title="Khóa học Marketing thực chiến từ những giảng viên hàng đầu Việt Nam"
-                  routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Y Tế',Id:'4'}"><i class="fa fa fa-line-chart" aria-hidden="true"></i> Y Tế</a>
+                    routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Y-Tế',Id:'4'}"><i
+                      class="fa fa fa-line-chart" aria-hidden="true"></i> Y Tế</a>
                   <ul class="issub" style="z-index: 1013; display: none;">
-                    <li><a routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Y Tế',Id:'4'}">Tất cả Y Tế</a></li>
+                    <li><a routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Y-Tế',Id:'4'}">Tất cả Y Tế</a></li>
                     <li><a href="/tag/facebook-marketing">Dinh Dưỡng</a></li>
                     <li><a href="/tag/tu-dong-hoa-marketing">Yoga - Fitness</a></li>
                     <li><a href="/tag/email-marketing">Sơ cứu</a></li>
-                   
+
                   </ul>
                 </li>
                 <li class="hassub"><a title="Khóa học Sale, bán hàng từ các chuyên gia Marketing hàng đầu course"
-                  routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Âm Nhạc',Id:'5'}"><i class="fa fa fa-shopping-cart" aria-hidden="true"></i> Âm Nhạc
-                    </a>
+                    routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Âm-Nhạc',Id:'5'}"><i
+                      class="fa fa fa-shopping-cart" aria-hidden="true"></i> Âm Nhạc
+                  </a>
                   <ul class="issub" style="z-index: 1014; display: none;">
-                    <li><a routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Âm Nhạc',Id:'5'}">Tất cả Âm nhạc</a></li>
-                    <li><a >Thanh nhạc</a></li>
-                    <li><a >Kỹ thuật nhạc cổ điển</a></li>
-                    <li><a >Phần mềm</a></li>
-                    
+                    <li><a routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Âm-Nhạc',Id:'5'}">Tất cả Âm nhạc</a>
+                    </li>
+                    <li><a>Thanh nhạc</a></li>
+                    <li><a>Kỹ thuật nhạc cổ điển</a></li>
+                    <li><a>Phần mềm</a></li>
+
                   </ul>
                 </li>
                 <li class="hassub"><a title="Các khóa học kinh doanh và khởi nghiệp để gia tăng doanh số hiệu quả"
-                  routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Thời Trang',Id:'6'}"><i class="fa fa fa-rocket" aria-hidden="true"></i> Thời Trang</a>
+                    routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Thời-Trang',Id:'6'}"><i
+                      class="fa fa fa-rocket" aria-hidden="true"></i> Thời Trang</a>
                   <ul class="issub" style="z-index: 1002; display: none;">
-                    <li><a routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Thời Trang',Id:'6'}">Tất cả Thời Trang</a></li>
-                    
+                    <li><a routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Thời-Trang',Id:'6'}">Tất cả Thời
+                        Trang</a></li>
+
                   </ul>
                 </li>
                 <li class="hassub"><a title="Các khóa học phát triển cá nhân để cải thiện cuộc sống và sự nghiệp"
-                  routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Sắc Đẹp',Id:'7'}"><i class="fa fa fa-lightbulb-o" aria-hidden="true"></i> Sắc Đẹp</a>
+                    routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Sắc Đẹp',Id:'7'}"><i
+                      class="fa fa fa-lightbulb-o" aria-hidden="true"></i> Sắc Đẹp</a>
                   <ul class="issub" style="z-index: 1002; display: none;">
-                    <li><a routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Sắc Đẹp',Id:'7'}">Tất cả Sắc đẹp</a></li>
-                    
+                    <li><a routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Sắc-Đẹp',Id:'7'}">Tất cả Sắc đẹp</a>
+                    </li>
+
                   </ul>
                 </li>
                 <li class="hassub"><a title="Các khóa học nâng các kiến thức sức khỏe và giới tính cho người Việt"
-                  routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Nghệ Thuật',Id:'8'}"><i class="fa fa fa-heartbeat" aria-hidden="true"></i> Nghệ Thuật</a>
+                    routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Nghệ-Thuật',Id:'8'}"><i
+                      class="fa fa fa-heartbeat" aria-hidden="true"></i> Nghệ Thuật</a>
                   <ul class="issub" style="z-index: 1005; display: none;">
-                    <li><a routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Nghệ Thuật',Id:'8'}">Tất cả Nghệ Thuật</a></li>
-                    
+                    <li><a routerLink='/danhmuckhoahoc' [queryParams]="{TenTheLoai:'Nghệ-Thuật',Id:'8'}">Tất cả Nghệ
+                        Thuật</a></li>
+
                   </ul>
                 </li>
-                
+
 
               </ul>
             </nav>
           </div>
         </div>
         <div class="col-lg-5 col-md-5 col-sm-4 cate-sm">
-          <form class="course-search-boxtop navbar-form form-inline" (ngSubmit)=search(frmSearch.value) #frmSearch=ngForm>
+          <form class="course-search-boxtop navbar-form form-inline" (ngSubmit)=search(frmSearch.value)
+            #frmSearch=ngForm>
             <input name="keyWord" type="text" class="form-control course-form"
               placeholder="Tìm khóa học, giảng viên bạn quan tâm" ngModel required>
             <button type="submit" class="btn course-btn-search" [disabled]="frmSearch.invalid">
@@ -242,13 +262,13 @@
             <a routerLink="/kichhoat" class="course-active-course"><i class="fa fa-unlock-alt" aria-hidden="true"></i>
               <p class="hidden-md hidden-xs hidden-sm">Kích hoạt khóa học</p>
             </a>
-            <a routerLink='/cart' class="course-cart"><i class="fa fa-shopping-cart" [ngClass]="{'cart-active':flag}" aria-hidden="true"></i><span
-                class="course-sl-cart"><b>{{count}}</b></span></a>
+            <a routerLink='/cart' class="course-cart"><i class="fa fa-shopping-cart" [ngClass]="{'cart-active':flag}"
+                aria-hidden="true"></i><span class="course-sl-cart"><b>{{count}}</b></span></a>
             <a class="course-reg-acc ml-2" routerLink='/signup' *ngIf='!logged'>Đăng ký</a>
             <a class="course-log-acc" routerLink='/login' *ngIf='!logged'>Đăng nhập</a>
             <a class="nav-item dropdown ml-3" dropdown>
               <a dropdownToggle type="button" class="nav-link dropdown-toggle waves-light dropdown-main" *ngIf='logged'>
-                <i class="fas fa-user"></i>
+                <i class="fa fa-user"></i>
                 <span> {{thongTinUser.Ten}} </span>
                 <span class="caret"></span>
               </a>
