--- a/src/app/src/_modules/home/search-result/search-result.component.css
+++ b/src/app/src/_modules/home/search-result/search-result.component.css
@@ -13,7 +13,7 @@
 .u-hot-cate h3 { font-size: 16px; font-weight: bold; border-bottom: 1px solid #d7d7d7; margin-bottom: 10px; padding-bottom: 5px;  }
 .u-hot-cate ul li { display: inline-block; line-height: 30px; margin: 9px 1px; }
 .u-hot-cate span { font-size: 13px; font-weight: normal; }
-.u-list-leftbar { padding-right: 0; width: 22% }
+.u-list-leftbar { padding-right: 0}
 ul {
     list-style-type: none;
 }
