--- a/src/app/src/_modules/home/user-page/user-page.component.html
+++ b/src/app/src/_modules/home/user-page/user-page.component.html
@@ -104,7 +104,7 @@
                             <div class="col-xs-6">
                                     <label><h4>Cập nhật mật khẩu</h4></label>
                                 <input type="checkbox" name='CheckPassword' id='CheckPassword'
-                                    (click)='checkUpdatePass()' checked class="ml-2" style="width:20px; height: 30px;">
+                                    (click)='checkUpdatePass()'  class="ml-2" style="width:20px; height: 30px;">
 
                                 
                             </div>
